[FIX] website: fix image alignment in search results
Since [1] when Bootstrap 5 was introduced, the images of search results
are not aligned anymore. This is because the detail part of the result
has been set to `flex-grow-1`.

This commit restores the former flex parameterisation through a new
class. The fix is applied both on the autocomplete results template and
the hybrid results element template (used to render `/website/search`).

[1]: https://github.com/odoo/odoo/commit/971e5a91aab96d36129a823e03f1f9f1b1293968

task-2951028

closes odoo/odoo#97944

--- a/addons/website/static/src/scss/website.scss
+++ b/addons/website/static/src/scss/website.scss
@@ -1471,6 +1471,11 @@ $ribbon-padding: 100px;
     display: none !important;
 }
 
+// Search results
+.o_search_result_item_detail {
+    flex: 1;
+}
+
 // Cookies Bar
 #website_cookies_bar {
     :not(.o_cookies_popup) {
